[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/3d/player.gd" type="Script" id=1]
[ext_resource path="res://assets/fps/gun.png" type="Texture" id=2]
[ext_resource path="res://assets/fps/point.png" type="Texture" id=3]
[ext_resource path="res://assets/fps/vi√±eta.png" type="Texture" id=4]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="BoxShape" id=8]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "shot",
"speed": 10.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="Camera" type="Camera" parent="."]
current = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )
shape = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Control"]
position = Vector2( 392, 296 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 6 )
animation = "shot"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 234.0
margin_top = 234.0
margin_right = 266.0
margin_bottom = 267.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 500, 500 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 500.0
margin_bottom = 500.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/fadeIn = SubResource( 7 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="animation_finished" from="CanvasLayer/Control/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
